home page finishes

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
           <span class="home__primary-heading">Web Tech Programming</span>
           <span class="home__secondary-heading" >Website 
            <div class="home__business">
-            <span class="design">Design</span>
-            <span class="development  show-text">Development</span>
+            <span class="design show-text">Design</span>
+            <span class="development">Development</span>
            </div>
            Business
         </h1>
         <button class="btn">Hire Me<i class="down-arrow fas fa-angle-down"></i></button>
       </section>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
