--- a/index.html
+++ b/index.html
@@ -28,6 +28,51 @@
         </h1>
         <button class="btn">Hire Me<i class="down-arrow fas fa-angle-down"></i></button>
       </section>
+      <section class="skills-section">
+        <h4 class="skills__heading">My Skills</h4>
+        <div class="skills">
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p> modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+          <div class="skill">
+            <i>Html Icon</i>
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="app.js"></script>
   </body>
