nav bar has finished

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   </head>
   <body>
     <div class="wrapper">
+      <nav class="nav">
+        <ul class="nav__lists">
+          <div class="nav__logo">Logo</div>
+          <duv class="nav__list-items">
+            <li class="nav__list-item">home</li>
+            <li class="nav__list-item">projects</li>
+            <li class="nav__list-item">about me</li>
+            <li class="nav__list-item">hire me</li>
+          </duv>
+        </ul>
+      </nav>
       <section class="home">
         <h1 class="home__heading">
           <span class="home__primary-heading">Web Tech Programming</span>
