--- a/index.html
+++ b/index.html
@@ -43,46 +43,50 @@
         <h4 class="skills__heading">My Skills</h4>
         <div class="skills">
           <div class="skill">
-            <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p> modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <h4>HTML</h4>
+            <p> HTML is a markup language that is used to tell the browser what kind of elements you want in your website.Eg.paragraph,button ect...</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>CSS</h4>
+            <p>CSS is a language the is used to style the website,coloring and layout.Without is all the websites would look horrible.</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>SASS</h4>
+            <p>SASS is what allows developers to write less CSS code and achieve more.It doesn't add any extra function.</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>Javascript</h4>
+            <p>JS is the programming language of the websites which is used to make website more interactive.Almost all the websites have to use this language.</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>React js</h4>
+            <p>React js is the most famous javascript library.With it you can make more complex websites and really awesome stuff.</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>Node Js</h4>
+            <p>This is a javascript runtime that makes it possible to write javascript outside of browser so that the code is not exposed to users.</p>
+          </div>
+          
+          <div class="skill">
+            <i>Html Icon</i>
+            <h4>Mongodb</h4>
+            <p>This is a non-relational database,used to store data so they won't go away when the users refresh the browser.</p>
           </div>
           <div class="skill">
             <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
-          </div>
-          <div class="skill">
-            <i>Html Icon</i>
-            <h5>HTML</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis id culpa ipsum modi in adipisci alias fuga totam, sapiente quo, qui, velit iure sunt repellendus eligendi voluptatem rerum cupiditate! Saepe.</p>
+            <h4>Git/Github</h4>
+            <p>This is a version control that every developers must know so that they can go back and forth of the changes they made in their code.</p>
           </div>
         </div>
+      </section>
+      <section class="about">
+        <h4 class="skills__heading">About Me</h4>
       </section>
     </div>
     <script src="app.js"></script>
