skill section finishes and about me inits

--- a/index.html
+++ b/index.html
@@ -43,50 +43,59 @@
         <h4 class="skills__heading">My Skills</h4>
         <div class="skills">
           <div class="skill">
-            <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748__340.png" alt="">
             <h4>HTML</h4>
             <p> HTML is a markup language that is used to tell the browser what kind of elements you want in your website.Eg.paragraph,button ect...</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+           <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747__340.png" alt="">
             <h4>CSS</h4>
             <p>CSS is a language the is used to style the website,coloring and layout.Without is all the websites would look horrible.</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+            <img src="https://seeklogo.com/images/S/sass-logo-E41E7734A8-seeklogo.com.png" />
             <h4>SASS</h4>
             <p>SASS is what allows developers to write less CSS code and achieve more.It doesn't add any extra function.</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+            <img src="https://www.freepnglogos.com/uploads/javascript-png/javascript-shield-logo-icon-2.png" />
             <h4>Javascript</h4>
             <p>JS is the programming language of the websites which is used to make website more interactive.Almost all the websites have to use this language.</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+            <img src="https://seeklogo.com/images/R/react-logo-7B3CE81517-seeklogo.com.png" />
             <h4>React js</h4>
             <p>React js is the most famous javascript library.With it you can make more complex websites and really awesome stuff.</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+       <img src="https://cdn.pixabay.com/photo/2015/04/23/17/41/node-js-736399__340.png" alt="">
             <h4>Node Js</h4>
             <p>This is a javascript runtime that makes it possible to write javascript outside of browser so that the code is not exposed to users.</p>
           </div>
           
           <div class="skill">
-            <i>Html Icon</i>
+           <img src="https://seeklogo.com/images/M/mongodb-logo-4A71340576-seeklogo.com.png" alt="">
             <h4>Mongodb</h4>
             <p>This is a non-relational database,used to store data so they won't go away when the users refresh the browser.</p>
           </div>
           <div class="skill">
-            <i>Html Icon</i>
+           <img src="https://seeklogo.com/images/G/github-logo-5F384D0265-seeklogo.com.png" alt="">
             <h4>Git/Github</h4>
             <p>This is a version control that every developers must know so that they can go back and forth of the changes they made in their code.</p>
           </div>
         </div>
       </section>
-      <section class="about">
+      <section class="about-section">
         <h4 class="skills__heading">About Me</h4>
+        <div class="about">
+          <img src="./imgs/mypicture.jpg" alt="My Photo" />
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quis quam omnis debitis dolore natus. Libero dolore odio sequi, ipsam consequatur pariatur asperiores consequuntur autem suscipit fugiat itaque alias nam?</p>
+        </div>
+      </section>
+      <section class="projects-section">
+        <div class="projects">
+          <div class="projects"></div>
+        </div>
       </section>
     </div>
     <script src="app.js"></script>
