about me section finishes

--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@
         <h4 class="skills__heading">About Me</h4>
         <div class="about">
           <img src="./imgs/mypicture.jpg" alt="My Photo" />
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quis quam omnis debitis dolore natus. Libero dolore odio sequi, ipsam consequatur pariatur asperiores consequuntur autem suscipit fugiat itaque alias nam?</p>
+          <p>I am a 20 years old <span class="about__important"><em>self-taught full-stack web developer</em></span>.Exactly a year ago I came across web development and I instanly fell in love with it.Ever since then I have been coding for at least 4 to 8 hours per day every single day and now I have come to the point where I am able to develop full-stack weebsites using MERN-Stack.I am absolutely passionate about coding and I can do it for an entire day.Now,my priority is to create awesome websites for the clients and I guarantee you if you hire me I won't let you down. </p>
         </div>
       </section>
       <section class="projects-section">
         <div class="projects">
-          <div class="projects"></div>
+          <div class="project">
+
+          </div>
         </div>
       </section>
     </div>
