projects section almost finishes

--- a/index.html
+++ b/index.html
@@ -86,17 +86,58 @@
         </div>
       </section>
       <section class="about-section">
-        <h4 class="skills__heading">About Me</h4>
+        <h4 class="skills__heading about-heading">About Me</h4>
         <div class="about">
           <img src="./imgs/mypicture.jpg" alt="My Photo" />
           <p>I am a 20 years old <span class="about__important"><em>self-taught full-stack web developer</em></span>.Exactly a year ago I came across web development and I instanly fell in love with it.Ever since then I have been coding for at least 4 to 8 hours per day every single day and now I have come to the point where I am able to develop full-stack weebsites using MERN-Stack.I am absolutely passionate about coding and I can do it for an entire day.Now,my priority is to create awesome websites for the clients and I guarantee you if you hire me I won't let you down. </p>
         </div>
       </section>
       <section class="projects-section">
+        <h4 class="skills__heading">Projects</h4>
         <div class="projects">
           <div class="project">
-
+              <div class="project__btns">
+                <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+                <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+            </div>
+            <h4 class="project__techs">React js,Node js</h4>
           </div>
+          <div class="project">
+            <div class="project__btns">
+              <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+              <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+          </div>
+          <h4 class="project__techs">React js,Node js</h4>
+        </div>
+        <div class="project">
+          <div class="project__btns">
+            <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+            <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+        </div>
+        <h4 class="project__techs">React js,Node js</h4>
+      </div>
+      <div class="project">
+        <div class="project__btns">
+          <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+          <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+      </div>
+      <h4 class="project__techs">React js,Node js</h4>
+    </div>
+    <div class="project">
+      <div class="project__btns">
+        <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+        <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+    </div>
+    <h4 class="project__techs">React js,Node js</h4>
+  </div>
+  <div class="project">
+    <div class="project__btns">
+      <button class="project__website"><i class="far fa-eye"></i>View Live</button>
+      <button class="project__github"><i class="fab fa-github"></i>View Github</button>
+  </div>
+  <h4 class="project__techs">React js,Node js</h4>
+</div>
+
         </div>
       </section>
     </div>
