--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <li class="nav__list-item">home</li>
             <li class="nav__list-item">projects</li>
             <li class="nav__list-item">about me</li>
-            <li class="nav__list-item">hire me</li>
+            <button class="nav__list-btn">
+              <li class="nav__list-item">hire me</li>
+            </button>
           </duv>
         </ul>
       </nav>
@@ -139,6 +141,17 @@
 </div>
 
         </div>
+      </section>
+      <section class="form-section">
+        <h4 class="skills__heading">Contact</h4>
+        <form class="form">
+          <div class="form__person-info">
+            <input type="text" placeholder="Name" class="form__input">
+            <input type="text" placeholder="Email" class="form__input">
+          </div>
+          <textarea placeholder="Message"  cols="30" rows="10" class="form__message"></textarea>
+          <button  class="btn form__btn">Submit</button>
+        </form>
       </section>
     </div>
     <script src="app.js"></script>
