--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav__list-item">projects</li>
             <li class="nav__list-item">about me</li>
             <button class="nav__list-btn">
-              <li class="nav__list-item">hire me</li>
+              <li>hire me</li>
             </button>
           </div>
         </div>
