back to home finishes

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         </div>
         <p class="footer__text">© All rights reserved</p>
       </footer>
+      <span class="back-home"><i class="fas fa-chevron-up"></i></span>
     </div>
     <script src="app.js"></script>
   </body>
