project images shown

--- a/index.html
+++ b/index.html
@@ -115,42 +115,42 @@
       <section class="projects-section">
         <h4 class="skills__heading">Projects</h4>
         <div class="projects">
-          <div class="project">
+          <div class="project project-1">
               <div class="project__btns">
                 <button class="project__website"><i class="far fa-eye"></i>View Live</button>
                 <button class="project__github"><i class="fab fa-github"></i>View Github</button>
             </div>
             <h4 class="project__techs">React js,Node js</h4>
           </div>
-          <div class="project">
+          <div class="project project-2">
             <div class="project__btns">
               <button class="project__website"><i class="far fa-eye"></i>View Live</button>
               <button class="project__github"><i class="fab fa-github"></i>View Github</button>
           </div>
           <h4 class="project__techs">React js,Node js</h4>
         </div>
-        <div class="project">
+        <div class="project project-3">
           <div class="project__btns">
             <button class="project__website"><i class="far fa-eye"></i>View Live</button>
             <button class="project__github"><i class="fab fa-github"></i>View Github</button>
         </div>
         <h4 class="project__techs">React js,Node js</h4>
       </div>
-      <div class="project">
+      <div class="project project-4">
         <div class="project__btns">
           <button class="project__website"><i class="far fa-eye"></i>View Live</button>
           <button class="project__github"><i class="fab fa-github"></i>View Github</button>
       </div>
       <h4 class="project__techs">React js,Node js</h4>
     </div>
-    <div class="project">
+    <div class="project project-5">
       <div class="project__btns">
         <button class="project__website"><i class="far fa-eye"></i>View Live</button>
         <button class="project__github"><i class="fab fa-github"></i>View Github</button>
     </div>
     <h4 class="project__techs">React js,Node js</h4>
   </div>
-  <div class="project">
+  <div class="project project-6">
     <div class="project__btns">
       <button class="project__website"><i class="far fa-eye"></i>View Live</button>
       <button class="project__github"><i class="fab fa-github"></i>View Github</button>
