--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
           <button  class="btn form__btn">Submit</button>
         </form>
       </section>
+      <div class="display-message-container">
+        <div class="display-message">
+          <h4 class="display-message__heading">Your message has been submitted successfully.We will get back to you as soon as possible.</h4>
+          <button class="btn">OK</button>
+        </div>
+      </div>
       <footer class="footer">
         <div class="social-icons footer__social-icons">
           <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -181,6 +187,8 @@
       </footer>
       <span class="back-home"><i class="fas fa-chevron-up"></i></span>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-firestore.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
