--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <h4 class="skills__heading">Projects</h4>
         <div class="projects">
           <div class="project project-1">
+            <img class="project__img" src="./imgs/project-1.png" alt="">
               <div class="project__btns">
               <a href="https://maymyovision.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
                <a href="https://github.com/WebTek828/Ecommerce" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a> 
@@ -123,6 +124,7 @@
             <h4 class="project__techs">MERN-Stack</h4>
           </div>
           <div class="project project-2">
+            <img class="project__img" src="./imgs/project-2.png" alt="">
             <div class="project__btns">
              <a href="https://pyinoolwintravel.netlify.app" target="_blank"> <button class="project__website"><i class="far fa-eye"></i>View Live</button></a>
              <a href="https://github.com/WebTek828/Place_Sharing_App" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a> 
@@ -130,6 +132,7 @@
           <h4 class="project__techs">MERN-Stack</h4>
         </div>
         <div class="project project-3">
+          <img class="project__img" src="./imgs/project-3.png" alt="">
           <div class="project__btns">
            <a href="https://budget-app-with-javascript.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
           <a href="https://github.com/WebTek828/Budget_App" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a>  
@@ -137,6 +140,7 @@
         <h4 class="project__techs">HTML,Css,Javascript</h4>
       </div>
       <div class="project project-4">
+        <img class="project__img" src="./imgs/project-4.png" alt="">
         <div class="project__btns">
          <a href="https://yahtzee-game-with-react.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
          <a href="https://github.com/WebTek828/Yahtzee-game" target="_blank" > <button class="project__github"><i class="fab fa-github"></i>View Github</button></a>
@@ -144,6 +148,7 @@
       <h4 class="project__techs">HTML,Css,React js</h4>
     </div>
     <div class="project project-5">
+      <img class="project__img" src="./imgs/project-5.png" alt="">
       <div class="project__btns">
        <a href="https://hangmangamewithreact.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
       <a href="https://github.com/WebTek828/Hangman-Game" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a>  
@@ -151,6 +156,7 @@
     <h4 class="project__techs">HTML,Css,React js</h4>
   </div>
   <div class="project project-6">
+    <img class="project__img" src="./imgs/project-6.png" alt="">
     <div class="project__btns">
     <a href="https://bristakhine.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a>  
      <a href="https://github.com/WebTek828/rest-repo" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a> 
