hire me btn working

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
            </div>
           <span class="home__text-business">Business</span>
         </h1>
-        <button class="btn">Hire Me<i class="down-arrow fas fa-angle-down"></i></button>
+        <button class="btn" id="hire-me">Hire Me<i class="down-arrow fas fa-angle-down"></i></button>
         <div class="social-icons home-social-icons">
           <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://github.com/WebTek828" target="_blank"><i class="fab fa-github"></i></a>
