--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <div class="project project-1">
             <img class="project__img" src="./imgs/project-7.png" alt="">
               <div class="project__btns">
-              <a href="https://maymyovision.netlify.app" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
-               <a href="https://github.com/WebTek828/Ecommerce" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a> 
+              <a href="https://netflixclonewithreact.netlify.app/" target="_blank"><button class="project__website"><i class="far fa-eye"></i>View Live</button></a> 
+               <a href="https://github.com/WebTek828/Netflix-Clone" target="_blank"><button class="project__github"><i class="fab fa-github"></i>View Github</button></a> 
             </div>
             <h4 class="project__techs">MERN-Stack TMDB API</h4>
           </div>
